Vytvořen test Successful Login a Logout

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,6044],[],[[4,0,0,[],[0,719,5275,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,16183],[],[[4,0,0,[],[0,705,5494,5],[]],[6,0,0,[],[1,6281,9824],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Regress test czc","*C:\\Users\\J5200\\PycharmProjects\\WebTestAutomation\\Regress_test_czc.robot","*Regress_test_czc.robot","*Negative Login","*Text '' (str) should be 'Nesprávné heslo' (str)"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Regress test czc","*C:\\Users\\J5200\\PycharmProjects\\WebTestAutomation\\Regress_test_czc.robot","*Regress_test_czc.robot","*Negative Login","*Text '' (str) should be 'Nesprávné heslo' (str)","*Positive Login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Regress test czc","name":"Regress test czc","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"Regress test czc","name":"Regress test czc","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1667753090582;
+window.output["baseMillis"] = 1667753918048;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6055;
+window.output["generated"] = 16189;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
